--- a/app/src/main/res/layout/activity_face_d.xml
+++ b/app/src/main/res/layout/activity_face_d.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FaceDActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.wonderkiln.camerakit.CameraView
+        android:id="@+id/camera_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/detect_face_button"/>
+
+    <Button
+        android:id="@+id/detect_face_button"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentBottom="true"
+        android:text="Detect Face"
+        android:textColor="@color/white"
+        android:background="@color/grey"
+        android:textSize="24sp" />
+
+    <com.randhir.mlkitdemo.Helper.GraphicOverlay
+        android:id="@+id/graphic_overlay"
+        android:layout_above="@+id/detect_face_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
